--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,16 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <altDeploymentRepository>internal.repo::default::file:../mvn-repo</altDeploymentRepository>
+        </configuration>
+      </plugin>
+
     </plugins>
 
     <pluginManagement>
@@ -355,12 +365,6 @@
               </exclusions>
             </dependency>
           </dependencies>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.7</version>
         </plugin>
 
         <plugin>
